--- a/src/app/features/lista-luminosidad/lista-luminosidad.component.html
+++ b/src/app/features/lista-luminosidad/lista-luminosidad.component.html
@@ -1,1 +1,61 @@
-<p>lista-luminosidad works!</p>
+<div class="container-lista-humedad-estadisticas-generales">
+  <div>
+    @if(luminosidad_masReciente?.valor){
+      <p> <b>Más reciente:</b> {{luminosidad_masReciente?.valor}} </p>
+    } @else {
+      <p> <b>Más reciente:</b> aún no se emite el primer valor</p>
+    }
+  </div>
+
+  <div>
+    @if(luminosidad_promedio){
+      <p> <b>Promedio:</b> {{luminosidad_promedio}} </p>
+    } @else {
+      <p> <b>Promedio:</b> aún no se emite el primer valor</p>
+    }
+  </div>
+
+  <div>
+    @if(luminosidad_maxima){
+      <p> <b>Máxima:</b> {{luminosidad_maxima}} </p>
+    } @else {
+      <p> <b>Máxima:</b> aún no se emite el primer valor</p>
+    }
+  </div>
+
+  <div>
+    @if(humedad_minima){
+      <p> <b>Mínima:</b> {{humedad_minima}} </p>
+    } @else {
+      <p> <b>Mínima:</b> aún no se emite el primer valor</p>
+    }
+  </div>
+</div>
+
+<div class="container-lista-humedad-tabla">
+  @if(luminosidades.length>0){
+    <table>
+      <tr class="fila-en-tabla-humedad">
+        <th class="columna-en-tabla-humedad">Valor</th>
+        <th class="columna-en-tabla-humedad">Fecha creación</th>
+      </tr>
+
+      @for (humedad of luminosidades ; track humedad.id){
+        <tr class="fila-en-tabla-humedad">
+          <td  class="columna-en-tabla-humedad">
+            <div class="texto-dentro-de-columna-en-tabla-humedad">
+              {{humedad.valor}}
+            </div>
+          </td>
+          <td  class="columna-en-tabla-humedad">
+            <div class="texto-dentro-de-columna-en-tabla-humedad">
+              {{humedad.createdAt}}
+            </div>
+          </td>
+        </tr>
+      }
+    </table>
+  } @else {
+    <p>Sin valores de luminosidad</p>
+  }
+</div>
