feat(style): cambio estilo botones navegación

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container-app">
   <div class="container-dashboard-botones">
-    <button>Dashboard</button>
-    <button>Temperatura</button>
-    <button>Luminosidad</button>
-    <button>Humedad</button>
+    <button class="boton-navegacion">Dashboard</button>
+    <button class="boton-navegacion">Temperatura</button>
+    <button class="boton-navegacion">Luminosidad</button>
+    <button class="boton-navegacion">Humedad</button>
   </div>
 
   <router-outlet/>
