--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container-app">
   <div class="container-dashboard-botones">
-    <button class="boton-navegacion">Dashboard</button>
-    <button class="boton-navegacion">Temperatura</button>
-    <button class="boton-navegacion">Luminosidad</button>
-    <button class="boton-navegacion">Humedad</button>
+    <button class="boton-navegacion" routerLink="/dashboard">Dashboard</button>
+    <button class="boton-navegacion" routerLink="/temperatura">Temperatura</button>
+    <button class="boton-navegacion" routerLink="/luminosidad">Luminosidad</button>
+    <button class="boton-navegacion" routerLink="/humedad">Humedad</button>
   </div>
 
   <router-outlet/>
