--- a/src/app/features/lista-humedad/lista-humedad.component.html
+++ b/src/app/features/lista-humedad/lista-humedad.component.html
@@ -1,3 +1,8 @@
+<div class="container-prueba-humedad">
+  <img class="imagen-nube" src="./assets/nube.webp" alt="nube">
+  
+</div>
+
 <div class="container-lista-comun-estadisticas-generales">
   <div>
     @if(humedad_masReciente?.valor){
