--- a/src/app/features/lista-luminosidad/lista-luminosidad.component.html
+++ b/src/app/features/lista-luminosidad/lista-luminosidad.component.html
@@ -1,3 +1,7 @@
+<div class="container-prueba-luminosidad">
+  <img class="imagen-ampolleta" src="./assets/ampolleta.png" alt="ampolleta"/>
+</div>
+
 <div class="container-lista-comun-estadisticas-generales">
   <div>
     @if(luminosidad_masReciente?.valor){
