--- a/src/app/features/lista-temperatura/lista-temperatura.component.html
+++ b/src/app/features/lista-temperatura/lista-temperatura.component.html
@@ -1,3 +1,7 @@
+<div class="container-prueba-temperatura">
+  <img class="imagen-termometro" src="./assets/termometro.png" alt="termometro">
+</div>
+
 <div class="container-lista-comun-estadisticas-generales">
   <div>
     @if(temperatura_masReciente?.valor){
