--- a/src/styles.css
+++ b/src/styles.css
@@ -5,22 +5,25 @@
 /* estilos para listas */
 .container-lista-comun-estadisticas-generales {
   display: flex;
-  margin-left: 10vw;
-  margin-right: 10vw;
   flex-direction: row;
-  width: 80vw;
-  justify-content: space-between;
+  margin-left: 11vw;
+  width: 50vw;
+  justify-content: center;
+  text-indent: 35px;
+  animation: slidein-estadisticas-generales 2s ease;
+  text-align: center;
+  font-size: 20px;
 }
-
 
 .container-lista-comun-tabla {
   margin-top: 5vh;
   display: flex;
   margin-left: 10vw;
   margin-right: 10vw;
-  flex-direction: row;
-  width: 80vw;
+  flex-direction: column;
   justify-content: space-between;
+  animation: slidein-estadisticas-tabla 2s ease;
+  font-size: 20px;
 }
 
 .fila-en-tabla-comun {
@@ -29,7 +32,7 @@
 }
 
 .columna-en-tabla-comun {
-  min-width: 40vw;
+  min-width: 25vw;
 }
 
 .texto-dentro-de-columna-en-tabla-comun {
@@ -50,5 +53,85 @@
 
 .columna-en-tabla-comun {
   border-right: 1px solid black;
+}
+
+.imagen-termometro {
+  margin-top: 7vh;
+  margin-bottom: 7vh;
+  animation: slidein-termometro 2s ease;
+  width: 280px;
+  height: 320px;
+}
+
+.imagen-nube{
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  animation: slidein-nube 2s ease;
+  width: 300px;
+  height: 300px;
+}
+
+.imagen-ampolleta{
+  margin-top: 7vh;
+  margin-bottom: 7vh;
+  animation: slidein-ampolleta 2s ease;
+  width: 270px;
+  height: 300px;
+}
+
+@keyframes slidein-termometro {
+  from {
+    margin-left: 100%;
+    width: 280px; 
+  }
+
+  to {
+    margin-left: 0%;
+    width: 280px;
+  }
+}
+
+@keyframes slidein-nube {
+  from {
+    margin-left: 100%;
+    width: 300px; 
+  }
+
+  to {
+    margin-left: 0%;
+    width: 300px;
+  }
+}
+
+@keyframes slidein-ampolleta {
+  from {
+    margin-left: 100%;
+    width: 270px; 
+  }
+
+  to {
+    margin-left: 0%;
+    width: 270px;
+  }
+}
+
+@keyframes slidein-estadisticas-generales{
+  from {
+    margin-left: 100%;
+  }
+
+  to {
+    margin-left: 15%;
+  }
+}
+
+@keyframes slidein-estadisticas-tabla{
+  from {
+    margin-left: 100%;
+  }
+
+  to {
+    margin-left: 14%;
+  }
 }
 
