--- a/src/app/features/lista-temperatura/lista-temperatura.component.html
+++ b/src/app/features/lista-temperatura/lista-temperatura.component.html
@@ -1,36 +1,4 @@
-<div class="container-lista-comun-estadisticas-generales">
-  <div>
-    @if(temperatura_masReciente?.valor){
-      <p> <b>Más reciente:</b> {{temperatura_masReciente?.valor}} </p>
-    } @else {
-      <p> <b>Más reciente:</b> aún no se emite el primer valor</p>
-    }
-  </div>
-
-  <div>
-    @if(temperatura_promedio){
-      <p> <b>Promedio:</b> {{temperatura_promedio}} </p>
-    } @else {
-      <p> <b>Promedio:</b> aún no se emite el primer valor</p>
-    }
-  </div>
-
-  <div>
-    @if(temperatura_maxima){
-      <p> <b>Máxima:</b> {{temperatura_maxima}} </p>
-    } @else {
-      <p> <b>Máxima:</b> aún no se emite el primer valor</p>
-    }
-  </div>
-
-  <div>
-    @if(temperatura_minima){
-      <p> <b>Mínima:</b> {{temperatura_minima}} </p>
-    } @else {
-      <p> <b>Mínima:</b> aún no se emite el primer valor</p>
-    }
-  </div>
-</div>
+<app-temperatura/>
 
 <div class="container-lista-comun-tabla">
   @if(temperaturas.length>0){
