--- a/src/app/features/lista-humedad/lista-humedad.component.html
+++ b/src/app/features/lista-humedad/lista-humedad.component.html
@@ -1,36 +1,4 @@
-<div class="container-lista-comun-estadisticas-generales">
-  <div>
-    @if(humedad_masReciente?.valor){
-      <p> <b>Más reciente:</b> {{humedad_masReciente?.valor}} </p>
-    } @else {
-      <p> <b>Más reciente:</b> aún no se emite el primer valor</p>
-    }
-  </div>
-
-  <div>
-    @if(humedad_promedio){
-      <p> <b>Promedio:</b> {{humedad_promedio}} </p>
-    } @else {
-      <p> <b>Promedio:</b> aún no se emite el primer valor</p>
-    }
-  </div>
-
-  <div>
-    @if(humedad_maxima){
-      <p> <b>Máxima:</b> {{humedad_maxima}} </p>
-    } @else {
-      <p> <b>Máxima:</b> aún no se emite el primer valor</p>
-    }
-  </div>
-
-  <div>
-    @if(humedad_minima){
-      <p> <b>Mínima:</b> {{humedad_minima}} </p>
-    } @else {
-      <p> <b>Mínima:</b> aún no se emite el primer valor</p>
-    }
-  </div>
-</div>
+<app-humedad/>
 
 <div class="container-lista-comun-tabla">
   @if(humedades.length>0){
