--- a/src/app/features/lista-luminosidad/lista-luminosidad.component.html
+++ b/src/app/features/lista-luminosidad/lista-luminosidad.component.html
@@ -1,36 +1,4 @@
-<div class="container-lista-comun-estadisticas-generales">
-  <div>
-    @if(luminosidad_masReciente?.valor){
-      <p> <b>Más reciente:</b> {{luminosidad_masReciente?.valor}} </p>
-    } @else {
-      <p> <b>Más reciente:</b> aún no se emite el primer valor</p>
-    }
-  </div>
-
-  <div>
-    @if(luminosidad_promedio){
-      <p> <b>Promedio:</b> {{luminosidad_promedio}} </p>
-    } @else {
-      <p> <b>Promedio:</b> aún no se emite el primer valor</p>
-    }
-  </div>
-
-  <div>
-    @if(luminosidad_maxima){
-      <p> <b>Máxima:</b> {{luminosidad_maxima}} </p>
-    } @else {
-      <p> <b>Máxima:</b> aún no se emite el primer valor</p>
-    }
-  </div>
-
-  <div>
-    @if(humedad_minima){
-      <p> <b>Mínima:</b> {{humedad_minima}} </p>
-    } @else {
-      <p> <b>Mínima:</b> aún no se emite el primer valor</p>
-    }
-  </div>
-</div>
+<app-luminocidad/>
 
 <div class="container-lista-comun-tabla">
   @if(luminosidades.length>0){
