--- a/src/app/features/humedad/humedad.component.html
+++ b/src/app/features/humedad/humedad.component.html
@@ -16,29 +16,29 @@
 
   <div class="">
     <table>
-      <tr class="">
-        <th class=""> Estadistica </th>
-        <th class=""> Valor [% Humedad] </th>
+      <tr class="fila-tabla-estadistica">
+        <th class="columna-tabla-estadistica"> Estadistica </th>
+        <th class="columna-tabla-estadistica"> Valor [% Humedad] </th>
       </tr>
 
-      <tr class="">
-        <td class=""> Más reciente </td>
-        <td class=""> {{ humedad_masReciente?.valor }} </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> Más reciente </td>
+        <td class="columna-tabla-estadistica"> {{ _utilsService.aproximarADosDecimales(humedad_masReciente?.valor) }} </td>
       </tr>
 
-      <tr class="">
-        <td class=""> Promedio </td>
-        <td class=""> {{ humedad_promedio }} </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> Promedio </td>
+        <td class="columna-tabla-estadistica"> {{ _utilsService.aproximarADosDecimales(humedad_promedio) }} </td>
       </tr>
 
-      <tr class="">
-        <td class=""> Mínima </td>
-        <td class=""> {{ humedad_minima }} </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> Mínima </td>
+        <td class="columna-tabla-estadistica"> {{ _utilsService.aproximarADosDecimales(humedad_minima) }} </td>
       </tr>
 
-      <tr class="">
-        <td class=""> Máximo </td>
-        <td class=""> {{humedad_maxima}} </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> Máximo </td>
+        <td class="columna-tabla-estadistica"> {{_utilsService.aproximarADosDecimales(humedad_maxima)}} </td>
       </tr>
 
     </table>
@@ -46,29 +46,29 @@
 
   <div class="">
     <table>
-      <tr class="">
-        <th class=""> Rango [% humedad]</th>
-        <th class=""> Ilustración </th>
+      <tr class="fila-tabla-estadistica">
+        <th class="columna-tabla-estadistica"> Rango [% humedad]</th>
+        <th class="columna-tabla-estadistica"> Ilustración </th>
       </tr>
 
-      <tr class="">
-        <td class=""> 0% <= % Humedad  <= 25% </td>
-        <td class=""> <img src="./assets/humedad/baja.png" alt="Girl in a jacket" width="25" height="25"> </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> 0% <= % Humedad  <= 25% </td>
+        <td class="columna-tabla-estadistica"> <img src="./assets/humedad/baja.png" alt="Girl in a jacket" width="25" height="25"> </td>
       </tr>
 
-      <tr class="">
-        <td class=""> 25% <= % Humedad  <= 50% </td>
-        <td class=""> <img src="./assets/humedad/media.png" alt="Girl in a jacket" width="25" height="25"> </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> 25% <= % Humedad  <= 50% </td>
+        <td class="columna-tabla-estadistica"> <img src="./assets/humedad/media.png" alt="Girl in a jacket" width="25" height="25"> </td>
       </tr>
 
-      <tr class="">
-        <td class=""> 50% <= % Humedad  <= 75% </td>
-        <td class=""> <img src="./assets/humedad/alta.png" alt="Girl in a jacket" width="25" height="25"> </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> 50% <= % Humedad  <= 75% </td>
+        <td class="columna-tabla-estadistica"> <img src="./assets/humedad/alta.png" alt="Girl in a jacket" width="25" height="25"> </td>
       </tr>
 
-      <tr class="">
-        <td class=""> 75% <= % Humedad  <= 100% </td>
-        <td class=""> <img src="./assets/humedad/muy_alta.png" alt="Girl in a jacket" width="25" height="25"> </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> 75% <= % Humedad  <= 100% </td>
+        <td class="columna-tabla-estadistica"> <img src="./assets/humedad/muy_alta.png" alt="Girl in a jacket" width="25" height="25"> </td>
       </tr>
 
     </table>
