--- a/src/app/features/luminocidad/luminocidad.component.html
+++ b/src/app/features/luminocidad/luminocidad.component.html
@@ -16,29 +16,29 @@
 
   <div class="">
     <table>
-      <tr class="">
-        <th class=""> Estadistica </th>
-        <th class=""> Valor [cd] </th>
+      <tr class="fila-tabla-estadistica">
+        <th class="columna-tabla-estadistica"> Estadistica </th>
+        <th class="columna-tabla-estadistica"> Valor [cd] </th>
       </tr>
 
-      <tr class="">
-        <td class=""> Más reciente </td>
-        <td class=""> {{ luminosidad_masReciente?.valor }} </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> Más reciente </td>
+        <td class="columna-tabla-estadistica"> {{ _utilsService.aproximarADosDecimales(luminosidad_masReciente?.valor) }} </td>
       </tr>
 
-      <tr class="">
-        <td class=""> Promedio </td>
-        <td class=""> {{ luminosidad_promedio }} </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> Promedio </td>
+        <td class="columna-tabla-estadistica"> {{ _utilsService.aproximarADosDecimales(luminosidad_promedio) }} </td>
       </tr>
 
-      <tr class="">
-        <td class=""> Mínima </td>
-        <td class=""> {{ luminosidad_minima }} </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> Mínima </td>
+        <td class="columna-tabla-estadistica"> {{ _utilsService.aproximarADosDecimales(luminosidad_minima) }} </td>
       </tr>
 
-      <tr class="">
-        <td class=""> Máxima </td>
-        <td class=""> {{luminosidad_maxima}} </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> Máxima </td>
+        <td class="columna-tabla-estadistica"> {{_utilsService.aproximarADosDecimales(luminosidad_maxima)}} </td>
       </tr>
 
     </table>
@@ -46,29 +46,29 @@
 
   <div class="">
     <table>
-      <tr class="">
-        <th class=""> Rango [cd] </th>
-        <th class=""> Ilustración </th>
+      <tr class="fila-tabla-estadistica">
+        <th class="columna-tabla-estadistica"> Rango [cd] </th>
+        <th class="columna-tabla-estadistica"> Ilustración </th>
       </tr>
 
-      <tr class="">
-        <td class=""> 0 <= cd <= 300 </td>
-        <td class=""> <img src="./assets/luminosidad/fuerte.png" alt="Girl in a jacket" width="25" height="25"> </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> 0 <= cd <= 300 </td>
+        <td class="columna-tabla-estadistica"> <img src="./assets/luminosidad/fuerte.png" alt="Girl in a jacket" width="25" height="25"> </td>
       </tr>
 
-      <tr class="">
-        <td class="">  300 < cd <= 600 </td>
-        <td class=""> <img src="./assets/luminosidad/alta.png" alt="Girl in a jacket" width="25" height="25"> </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica">  300 < cd <= 600 </td>
+        <td class="columna-tabla-estadistica"> <img src="./assets/luminosidad/alta.png" alt="Girl in a jacket" width="25" height="25"> </td>
       </tr>
 
-      <tr class="">
-        <td class=""> 600 < cd <= 900</td>
-        <td class=""> <img src="./assets/luminosidad/media.png" alt="Girl in a jacket" width="25" height="25"> </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> 600 < cd <= 900</td>
+        <td class="columna-tabla-estadistica"> <img src="./assets/luminosidad/media.png" alt="Girl in a jacket" width="25" height="25"> </td>
       </tr>
 
-      <tr class="">
-        <td class=""> 900 < cd <= 1200 </td>
-        <td class=""> <img src="./assets/luminosidad/oscuro.png" alt="Girl in a jacket" width="25" height="25"> </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> 900 < cd <= 1200 </td>
+        <td class="columna-tabla-estadistica"> <img src="./assets/luminosidad/oscuro.png" alt="Girl in a jacket" width="25" height="25"> </td>
       </tr>
 
     </table>
