--- a/src/app/features/temperatura/temperatura.component.html
+++ b/src/app/features/temperatura/temperatura.component.html
@@ -5,9 +5,9 @@
       @if( -40 <= temperatura_masReciente.valor &&  temperatura_masReciente.valor <= 0){
         <img src="./assets/temperatura/nieve.png" alt="Girl in a jacket" width="200" height="200">
       } @else if (0 < temperatura_masReciente.valor &&  temperatura_masReciente.valor <= 10) {
-        <img src="./assets/temperatura/frio.png" alt="Girl in a jacket" width="200" height="200">
+        <img src="./assets/temperatura/lluvia.png" alt="Girl in a jacket" width="200" height="200">
       } @else if (10 < temperatura_masReciente.valor &&  temperatura_masReciente.valor<= 20) {
-        <img src="./assets/temperatura/frio.png.png" alt="Girl in a jacket" width="200" height="200">
+        <img src="./assets/temperatura/frio.png" alt="Girl in a jacket" width="200" height="200">
       } @else if (20  < temperatura_masReciente.valor &&  temperatura_masReciente.valor<= 30){
         <img src="./assets/temperatura/templado.png" alt="Girl in a jacket" width="200" height="200">
       } @else if (30 < temperatura_masReciente.valor &&  temperatura_masReciente.valor <= 40){
@@ -18,29 +18,29 @@
 
   <div class="">
     <table>
-      <tr class="">
-        <th class=""> Estadistica </th>
-        <th class=""> Valor [C°] </th>
+      <tr class="fila-tabla-estadistica">
+        <th class="columna-tabla-estadistica"> Estadistica </th>
+        <th class="columna-tabla-estadistica"> Valor [C°] </th>
       </tr>
 
-      <tr class="">
-        <td class=""> Más reciente </td>
-        <td class=""> {{ temperatura_masReciente?.valor }} </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> Más reciente </td>
+        <td class="columna-tabla-estadistica"> {{ _utilsService.aproximarADosDecimales(temperatura_masReciente?.valor) }} </td>
       </tr>
 
-      <tr class="">
-        <td class=""> Promedio </td>
-        <td class=""> {{ temperatura_promedio }} </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> Promedio </td>
+        <td class="columna-tabla-estadistica"> {{ _utilsService.aproximarADosDecimales(temperatura_promedio) }} </td>
       </tr>
 
-      <tr class="">
-        <td class=""> Mínima </td>
-        <td class=""> {{ temperatura_minima }} </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> Mínima </td>
+        <td class="columna-tabla-estadistica"> {{ _utilsService.aproximarADosDecimales(temperatura_minima) }} </td>
       </tr>
 
-      <tr class="">
-        <td class=""> Máximo </td>
-        <td class=""> {{temperatura_maxima}} </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> Máximo </td>
+        <td class="columna-tabla-estadistica"> {{_utilsService.aproximarADosDecimales(temperatura_maxima)}} </td>
       </tr>
 
     </table>
@@ -48,34 +48,34 @@
 
   <div class="">
     <table>
-      <tr class="">
-        <th class=""> Rango [C°]</th>
-        <th class=""> Ilustración </th>
+      <tr class="fila-tabla-estadistica">
+        <th class="columna-tabla-estadistica"> Rango [C°]</th>
+        <th class="columna-tabla-estadistica"> Ilustración </th>
       </tr>
 
-      <tr class="">
-        <td class=""> -40 <= T° <= 0 </td>
-        <td class=""> <img src="./assets/temperatura/nieve.png" alt="Girl in a jacket" width="25" height="25"> </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> -40 <= T° <= 0 </td>
+        <td class="columna-tabla-estadistica"> <img src="./assets/temperatura/nieve.png" alt="Girl in a jacket" width="25" height="25"> </td>
       </tr>
 
-      <tr class="">
-        <td class=""> 0 < T° <= 10 </td>
-        <td class=""> <img src="./assets/temperatura/lluvia.png" alt="Girl in a jacket" width="25" height="25"> </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> 0 < T° <= 10 </td>
+        <td class="columna-tabla-estadistica"> <img src="./assets/temperatura/lluvia.png" alt="Girl in a jacket" width="25" height="25"> </td>
       </tr>
 
-      <tr class="">
-        <td class=""> 10 < T° <= 20 </td>
-        <td class=""> <img src="./assets/temperatura/frio.png" alt="Girl in a jacket" width="25" height="25"> </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> 10 < T° <= 20 </td>
+        <td class="columna-tabla-estadistica"> <img src="./assets/temperatura/frio.png" alt="Girl in a jacket" width="25" height="25"> </td>
       </tr>
 
-      <tr class="">
-        <td class=""> 20 < T° <= 30 </td>
-        <td class=""> <img src="./assets/temperatura/templado.png" alt="Girl in a jacket" width="25" height="25"> </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> 20 < T° <= 30 </td>
+        <td class="columna-tabla-estadistica"> <img src="./assets/temperatura/templado.png" alt="Girl in a jacket" width="25" height="25"> </td>
       </tr>
 
-      <tr class="">
-        <td class=""> 30 < T° <= 40 </td>
-        <td class=""> <img src="./assets/temperatura/soleado.png" alt="Girl in a jacket" width="25" height="25"> </td>
+      <tr class="fila-tabla-estadistica">
+        <td class="columna-tabla-estadistica"> 30 < T° <= 40 </td>
+        <td class="columna-tabla-estadistica"> <img src="./assets/temperatura/soleado.png" alt="Girl in a jacket" width="25" height="25"> </td>
       </tr>
 
     </table>
