--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,19 @@
   align-items: center;
 }
 
+.fila-tabla-estadistica {
+  background: rgba(100,100,100,0.04);
+}
+
+.columna-tabla-estadistica {
+  min-width: 15vw;
+  max-width: 15vw;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
 
 .container-lista-comun-tabla {
   margin-top: 5vh;
