--- a/src/app/features/luminocidad/luminocidad.component.html
+++ b/src/app/features/luminocidad/luminocidad.component.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="">
-    <table>
+    <table class="table-bordered">
       <tr class="fila-tabla-estadistica">
         <th class="columna-tabla-estadistica"> Estadistica </th>
         <th class="columna-tabla-estadistica"> Valor [cd] </th>
@@ -45,7 +45,7 @@
   </div>
 
   <div class="">
-    <table>
+    <table class="table-bordered">
       <tr class="fila-tabla-estadistica">
         <th class="columna-tabla-estadistica"> Rango [cd] </th>
         <th class="columna-tabla-estadistica"> Ilustración </th>
