--- a/src/app/features/temperatura/temperatura.component.html
+++ b/src/app/features/temperatura/temperatura.component.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="">
-    <table>
+    <table class="table-bordered">
       <tr class="fila-tabla-estadistica">
         <th class="columna-tabla-estadistica"> Estadistica </th>
         <th class="columna-tabla-estadistica"> Valor [C°] </th>
@@ -47,7 +47,7 @@
   </div>
 
   <div class="">
-    <table>
+    <table class="table-bordered">
       <tr class="fila-tabla-estadistica">
         <th class="columna-tabla-estadistica"> Rango [C°]</th>
         <th class="columna-tabla-estadistica"> Ilustración </th>
