--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="container-app">
-  <div class="container-app-titulo">
+  <div class="container-app-titulo" style="color: white;">
     <h1>Proyecto Nuevas Tecnologias Computacionales</h1>
   </div>
   <div class="container-dashboard-botones">
-    <button class="boton-navegacion" routerLink="/dashboard">Dashboard</button>
-    <button class="boton-navegacion" routerLink="/temperatura">Temperatura</button>
-    <button class="boton-navegacion" routerLink="/luminosidad">Luminosidad</button>
-    <button class="boton-navegacion" routerLink="/humedad">Humedad</button>
+    <button class="btn" routerLink="/dashboard">Dashboard</button>
+    <button class="btn" routerLink="/temperatura">Temperatura</button>
+    <button class="btn" routerLink="/luminosidad">Luminosidad</button>
+    <button class="btn" routerLink="/humedad">Humedad</button>
   </div>
 
   <div class="container-router">
