--- a/src/styles.css
+++ b/src/styles.css
@@ -20,10 +20,12 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  background-color: #e8e8e8;
 }
 
 .fila-tabla-estadistica {
-  background: rgba(100,100,100,0.04);
+  /*background: rgba(100,100,100,0.04);*/
+  background-color: #f5f6e6;
 }
 
 .columna-tabla-estadistica {
@@ -32,9 +34,6 @@
   justify-content: center;
   align-items: center;
 }
-
-
-
 
 .container-lista-comun-tabla {
   margin-top: 5vh;
