Arreglo falta ortográfica "Estadística"

--- a/src/app/features/humedad/humedad.component.html
+++ b/src/app/features/humedad/humedad.component.html
@@ -17,7 +17,7 @@
   <div class="">
     <table class="table-bordered">
       <tr class="fila-tabla-estadistica">
-        <th class="columna-tabla-estadistica"> Estadistica </th>
+        <th class="columna-tabla-estadistica"> Estadística </th>
         <th class="columna-tabla-estadistica"> Valor [% Humedad] </th>
       </tr>
 
