--- a/src/app/features/temperatura/temperatura.component.html
+++ b/src/app/features/temperatura/temperatura.component.html
@@ -19,7 +19,7 @@
   <div class="">
     <table class="table-bordered">
       <tr class="fila-tabla-estadistica">
-        <th class="columna-tabla-estadistica"> Estadistica </th>
+        <th class="columna-tabla-estadistica"> Estadística </th>
         <th class="columna-tabla-estadistica"> Valor [C°] </th>
       </tr>
 
