feat: ultimo codigo

--- a/src/app/features/temperatura/temperatura.component.html
+++ b/src/app/features/temperatura/temperatura.component.html
@@ -10,7 +10,7 @@
         <img src="./assets/temperatura/frio.png" alt="Girl in a jacket" width="200" height="200">
       } @else if (20  < temperatura_masReciente.valor &&  temperatura_masReciente.valor<= 30){
         <img src="./assets/temperatura/templado.png" alt="Girl in a jacket" width="200" height="200">
-      } @else if (30 < temperatura_masReciente.valor &&  temperatura_masReciente.valor <= 40){
+      } @else if (30 < temperatura_masReciente.valor){
         <img src="./assets/temperatura/soleado.png" alt="Girl in a jacket" width="200" height="200">
       }
     }
@@ -74,7 +74,7 @@
       </tr>
 
       <tr class="fila-tabla-estadistica">
-        <td class="columna-tabla-estadistica"> 30 < T° <= 40 </td>
+        <td class="columna-tabla-estadistica"> 30 < T°  </td>
         <td class="columna-tabla-estadistica"> <img src="./assets/temperatura/soleado.png" alt="Girl in a jacket" width="25" height="25"> </td>
       </tr>
 
