--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,9 +4,21 @@
   align-items: center;
   flex-direction: column;
   width: 100vw;
-  height: 100vh;
-  background-color: #353956;
+  min-height: 100vh;
+  max-height: 100vh;
   text-align: center;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: royalblue;
+  min-width: 100vw;
+  max-width: 100vw;
+  min-height: 30vh;
+  max-height: 30vh;
 }
 
 .container-dashboard-botones {
@@ -21,17 +33,19 @@
 
 /* estilo botones */
 .btn{
-  background-color: #54668e;
+  background-color: dodgerblue;
   color: white;
 }
 
 /* estilo contenido en router link*/
 .container-router {
-  min-height: 60vh;
+  min-height: 70vh;
+  max-height: 70vh;
 }
 
 /* titulo app */
 .container-app-titulo {
+  margin-top: 5vh;
   min-width: 80vw;
   max-width: 80vw;
   display: flex;
