--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
 <div class="container-app">
-  <div class="container-app-titulo" style="color: white;">
-    <h1>Proyecto Nuevas Tecnologias Computacionales</h1>
-  </div>
-  <div class="container-dashboard-botones">
-    <button class="btn" routerLink="/dashboard">Dashboard</button>
-    <button class="btn" routerLink="/temperatura">Temperatura</button>
-    <button class="btn" routerLink="/luminosidad">Luminosidad</button>
-    <button class="btn" routerLink="/humedad">Humedad</button>
+  <div class="header">
+    <div class="container-app-titulo" style="color: white;">
+      <h1>Proyecto Nuevas Tecnologias Computacionales</h1>
+    </div>
+    <div class="container-dashboard-botones">
+      <button class="btn" routerLink="/dashboard">Dashboard</button>
+      <button class="btn" routerLink="/temperatura">Temperatura</button>
+      <button class="btn" routerLink="/luminosidad">Luminosidad</button>
+      <button class="btn" routerLink="/humedad">Humedad</button>
+    </div>
   </div>
 
   <div class="container-router">
