--- a/src/app/features/lista-luminosidad/lista-luminosidad.component.html
+++ b/src/app/features/lista-luminosidad/lista-luminosidad.component.html
@@ -1,5 +1,7 @@
+<!-- metrica -->
 <app-luminocidad/>
 
+<!-- tabla para mostrar todos los registros capturados para la metrica -->
 <div class="container-lista-comun-tabla">
   @if(luminosidades.length>0){
     <table>
