--- a/src/app/features/lista-temperatura/lista-temperatura.component.html
+++ b/src/app/features/lista-temperatura/lista-temperatura.component.html
@@ -1,5 +1,7 @@
+<!-- metrica -->
 <app-temperatura/>
 
+<!-- tabla para mostrar todos los registros capturados para la metrica -->
 <div class="container-lista-comun-tabla">
   @if(temperaturas.length>0){
     <table>
