--- a/src/app/features/lista-humedad/lista-humedad.component.html
+++ b/src/app/features/lista-humedad/lista-humedad.component.html
@@ -1,5 +1,7 @@
+<!-- metrica -->
 <app-humedad/>
 
+<!-- tabla para mostrar todos los registros capturados para la metrica -->
 <div class="container-lista-comun-tabla">
   @if(humedades.length>0){
     <table>
